Implement core HexGameState and basic pathfinding